# ccmMul

./: .gitignore  .pylintrc  MANIFEST.in  README.md  main.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
config/: config.json
src/: __init__.py  analysis.py  multivariate_ccm.py  plotting.py  utils.py
tests/: __init__.py  conftest.py  test_analysis.py  test_multivariate_ccm.py  test_plotting.py  test_utils.py
