# setup.cfg
[metadata]
name = ccmMul
version = 1.0.0
author = SS
author_email = your.email@example.com
description = Multivariate Convergent Cross Mapping (CCM) analysis package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ShrathSPhD/ccmMul
project_urls =
    Bug Tracker = https://github.com/ShrathSPhD/ccmMul/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Mathematics

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.20.0
    pandas>=1.3.0
    scikit-learn>=0.24.0
    matplotlib>=3.3.0

[options.extras_require]
dev =
    pytest>=6.0
    pytest-cov>=2.0
    black>=22.0
    pylint>=2.8.0
    mypy>=0.900
    tox>=3.24.0

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test
python_functions = test_*
addopts = -v --cov=src --cov-report=term-missing

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True