[metadata]
name = ccmMul
version = 1.0.0
author = Sharath Sathish
author_email = your.email@example.com
description = Multivariate Convergent Cross Mapping (CCM) analysis package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SharathSPhD/ccmMul
project_urls =
    Bug Tracker = https://github.com/SharathSPhD/ccmMul/issues
    Documentation = https://ccmMul.readthedocs.io/
    Source Code = https://github.com/SharathSPhD/ccmMul
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Information Analysis
    Typing :: Typed

[options]
packages = find:
python_requires = >=3.8
package_dir =
    = src
include_package_data = True
zip_safe = False

[options.packages.find]
where = src

[options.package_data]
* = py.typed

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test
python_functions = test_*
addopts = 
    -v 
    --cov=src 
    --cov-report=term-missing 
    --cov-report=xml 
    --doctest-modules

[coverage:run]
source = src
branch = True

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if self.debug:
    raise NotImplementedError
    if __name__ == .__main__.:
    pass
    raise ImportError

[flake8]
max-line-length = 88
extend-ignore = E203
exclude = .git,__pycache__,build,dist,*.egg-info

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True
strict_optional = True